# backend/apps/homepage/models/__init__.py
@@ -8,5 +8,6 @@
 @Date : 2026-05-12 00:00
 '''
 from apps.homepage.models.service_link import ServiceLink
+from apps.homepage.models.site_metadata import SiteMetadata
 
-__all__ = ["ServiceLink"]
+__all__ = ["ServiceLink", "SiteMetadata"]
